[project]
name = "us_group_manager"
version = "0.1.0"
description = "Bot for managing of telegram group chat users."
authors = [
    {name = "Denis Nesterov", email = "r@dionest.ru"},
]
dependencies = ["python-dotenv>=1.0.1", 
                "aiogram>=3.19.0", 
                "alembic>=1.14.1", 
                "sqlmodel>=0.0.22", 
                "pydantic-settings>=2.7.1", 
                "aiosqlite>=0.21.0",
                "openpyxl",
                "loguru"
                ]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[dependency-groups]
dev = [
    "pytest>=7.3.1",
    "black>=23.3.0",
    "isort>=5.12.0",
    "mypy>=1.15.0",
    "flake8>=6.0.0",
    "flake8-docstrings>=1.7.0",
    "schemathesis>=3.19.0",
    "pytest-cov>=4.1.0",
    "Flake8-pyproject>=1.2.3",
    "types-jsonschema>=4.23.0.20241208",
    "openpyxl-stubs"
]


[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
exclude = "tests"


[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "D212"]
exclude = [".git", "__pycache__", "build", "dist"]
max-complexity = 10
docstring-convention = "google"
per-file-ignores = [
    "__init__.py:F401",
    "tests/*:D100,D101,D102,D103"
]
